fix: align usertools header items

--- a/app/ui/src/Pages/Project/components/ProjectNavigation/components/NavElements/NavElements.module.scss
+++ b/app/ui/src/Pages/Project/components/ProjectNavigation/components/NavElements/NavElements.module.scss
@@ -48,6 +48,7 @@
 
     .usertoolsSettings {
       float: right;
+      display: flex;
     }
 
     .toggleToolsWrapper {
